solc_mutator_ossfuzz_seed_corpus/test_solidity/test_c33c09ca177243e6f201c06689332c768ca416c139f6cfbb7883b7549f4a23b2_92b2c89cec50fd4017292dadfaf539cc3c527075_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  modifier m0(bytes21 i0,bytes6 i1) 
  {
    if ((int104(2657670290340470831367820323238) < int104(9698662722715783106452520784385)))
    {
      i0 = bytes21(0x000000000000000000000000000000000000000000);
      _;
    }
    else if ((false && false))
    {
    }
    else
    {
      (i1) = (bytes6(0x000000000000));
    }
    i0 |= bytes21(0x000000000000000000000000000000000000000000);
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71,
    M72, M73, M74, M75, M76, M77, M78, M79,
    M80, M81, M82, M83, M84, M85, M86, M87,
    M88, M89, M90, M91, M92, M93, M94, M95,
    M96, M97, M98, M99
  }
  function f0() private    returns(uint80 o0)
  {
    (uint80 l0) = f0();
  }
  type T0 is int192;
  bytes14 public constant cons0 = ((bytes14(0x0000000000000000000000000000) | (bytes14(0xe975f78d49f0f2422d74bcb49341) | bytes14(0xca6ccdd1d1fd40572cc253c1a996))) | bytes14(0x0000000000000000000000000000));
  modifier m1(bool i0) virtual
  {
    _;
  }
  bytes[]  public s0 = ["ffffffffffffffffffffffffff000000000000000000000000000000000000000000000000000000"];
  modifier m2() virtual
  {
    _;
    unchecked {
      s0 = [bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffa06ceba6728bbbdc17607f")];
      (s0[1], s0[0], s0) = ("71c300b7f037322214d80994e2340f923d9a5e0c6351aed216ffffffffffffffffffffffffffffffffffffffff", "000000000000000000000074e061fc9a8778f643cfedeb2f6bdd453f8bdaba5d81c3d6386f40f98521dc", [bytes("ffffffffffffffffffffffffffffff")]);
    }
  }
}
type T1 is uint96;
// ----
// TypeError 7407: (su0.sol:1366-1450): Type string memory[1] memory is not implicitly convertible to expected type bytes storage ref[] storage ref.
